# opsis-agent

./: .gitignore  .npmrc  LICENSE.txt  build-installer.ps1  check-runbooks.js  electron-main.js  install-service.js  install-startup.js  installer.iss  package-lock.json  package-production.json  package.json  query  send-diagnostic.js  start-opsis-gui.bat  test-escalation.js  test-troubleshooting-standalone.js  test-troubleshooting.js  tsconfig.gui.json  tsconfig.service.json
config/: exclusions.json
runbooks/: rb-application-crash.json  rb-cpu-high.json  rb-disk-error.json  rb-disk-space-low.json  rb-dns-failure.json  rb-memory-high.json  rb-network-adapter-issue.json  rb-print-spooler.json  rb-reboot-required.json  rb-service-stopped.json  rb-time-sync.json  rb-windows-update-failed.json
scripts/: copy-assets.js  install-service-exe.js  install-service.js  remove-credentials.ps1  store-apikey.ps1  uninstall-service-exe.js  uninstall-service.js
src/: index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ipc.rs  main.rs
src/ai/: tier1-orchestrator.ts
src/common/: logger.d.ts  logger.d.ts.map  logger.js.map  logger.ts
src/config/: config.ts
src/core/: database.ts
src/detection/: expert-rules.ts  rules-engine.ts  tier1-orchestrator.ts
src/execution/: playbook-executor.ts
src/gui/: electron-main.ts  index.html  index1.html  index2.html  preload.js
src/learning/: confidence-adjuster.ts  pattern-learner.ts  (+1 more)
tests/: event-subscriptions.test.ts  maintenance-windows.test.ts  state-tracker.test.ts  verification-step.test.ts
(+44 files in other folders)
